--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     />
 </head>
 <body></body>
+<script type="text/javascript" src="js/snake.js"></script>
 <script type="text/javascript" src="js/game.js"></script>
 </html>
