--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>HaiZuka - Shoot number ball Game</title>
+    <title>Slither.io | HaiZuka</title>
     <link rel="stylesheet" href="css/style.css">
     <meta 
         name='viewport' 
